--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "trafiklab/resrobot-php-sdk",
-  "description": "Use Swedish public transport data in your project with ResRobot",
+  "name": "trafiklab/reseplanerare-php-sdk",
+  "description": "Use Swedish public transport data in your project with ResRobot and SL",
   "type": "library",
   "license": "",
   "authors": [
@@ -24,7 +24,8 @@
     "ext-mbstring": "*",
     "cache/apcu-adapter": "^1.0",
     "cache/array-adapter": "^1.0",
-    "cache/filesystem-adapter": "^1.0"
+    "cache/filesystem-adapter": "^1.0",
+    "trafiklab/php-sdk-base": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.5",
@@ -32,9 +33,15 @@
     "phpmd/phpmd": "^2.6.0",
     "friendsofphp/php-cs-fixer": "^2.14"
   },
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/trafiklab/php-sdk-base"
+    }
+  ],
   "autoload": {
     "psr-0": {
-      "Trafiklab\\Resrobot": "src/"
+      "Trafiklab": "src/"
     }
   }
 }
