--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-  "name": "trafiklab/reseplanerare-php-sdk",
+  "name": "trafiklab/resrobot-php-sdk",
   "description": "Use Swedish public transport data in your project with ResRobot and SL",
   "type": "library",
-  "license": "",
+  "license": "MPL-2.0",
   "authors": [
     {
       "name": "Bert Marcelis",
@@ -21,7 +21,7 @@
   "require": {
     "php": ">=7.1",
     "ext-json": "*",
-    "trafiklab/php-sdk-base": "dev-master"
+    "trafiklab/php-sdk-commons": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.5",
@@ -32,7 +32,7 @@
   "repositories": [
     {
       "type": "vcs",
-      "url": "https://github.com/trafiklab/php-sdk-base"
+      "url": "https://github.com/trafiklab/php-sdk-commons"
     }
   ],
   "autoload": {
