--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   "require": {
     "php": ">=7.1",
     "ext-json": "*",
-    "trafiklab/php-sdk-commons": "^0.2.0"
+    "trafiklab/php-sdk-commons": "~0.3.3"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.5",
