Add realtime and platform support to departure and arrival boards

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   "require": {
     "php": ">=7.1",
     "ext-json": "*",
-    "trafiklab/php-sdk-commons": "1.0.*"
+    "trafiklab/php-sdk-commons": "~1.1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.5",
